# workbench-images

./: .gitignore  .markdownlint.json  CHANGELOG.md  DEVELOPMENT.md  LICENSE  Makefile  OWNERS  README.md  automated-image-builder.sh  build-recipes.sh  create-standard-recipes.sh  helper-functions  interactive-image-builder.sh  stability-stable-studio.md  update-python-requirements.sh  upload-recipes.sh
base/: Makefile  README.md
base/c9s/: Containerfile  Dockerfile  el9-cisco-openh264.repo-x86_64  mssql-2022.repo-x86_64  os-packages.txt  patch.txt
base/ubi8/: Dockerfile  Pipfile
base/ubi9/: Dockerfile  Pipfile
code-server/: Makefile  README.md  code-server-example.yaml
code-server-julia/: Makefile
code-server-julia/container/: Dockerfile  run-code-server.sh
code-server/container/: Dockerfile  run-code-server.sh
cuda-layer/: Makefile  README.md
cuda-layer/base/: Containerfile  Dockerfile
cuda-layer/devel/: Containerfile  Dockerfile
cuda-layer/runtime/: Containerfile  Dockerfile
jupyter/datascience/: README.md
jupyter/datascience-code-server/: Makefile  README.md
jupyter/datascience-rstudio/: Makefile  README.md
jupyter/datascience/py39/streamlit-menu/: install.json  pyproject.toml
jupyter/datascience/py39/streamlit-menu/src/: index.ts
jupyter/minimal/: README.md
jupyterhub-images/: README.md
monai-notebook/: README.md
notebook-controller-images/: Makefile  README.md
r-notebook/: Dockerfile  README.md  requirements.in  requirements.txt  rserver.conf
rstudio/: Makefile  README.md  rstudio-example.yaml
runtimes/: Makefile
(+417 files in other folders)
