[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.4.2"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["jupyterlab_streamlit_menu/labextension/static/style.js"]
ensured-targets = ["jupyterlab_streamlit_menu/labextension/static/style.js", "jupyterlab_streamlit_menu/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["jupyterlab_streamlit_menu/labextension/**", "yarn.lock", ".*", "package-lock.json"]
